--- a/views/content/recipes.html
+++ b/views/content/recipes.html
@@ -1,100 +1,32 @@
 <section>
   <div class="selfcare-image">
-    <img src="img/banners/recepie.jpg" alt="">
-    <h2 class="text-uppercase get-center white font-semibold">Recipes</h2>
+    <img src="img/banners/recepie.jpg" alt="" class="img-responsive">
+    <h2 class="font-semibold get-center text-uppercase white">recipes</h2>
   </div>
-
-  <div class="container">
-    <div class="about-desc get-up brand-brown-bg white relate">
-      <p class="health-descp">Recipes that help you eat right without compromising on taste.</p>
-    </div>
-  </div>
-
-  <div class="recipes-main">
+  <div class="selfcare-main">
     <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="recipe-imgholder ">
-            <img src="img/recipes/baingan.jpg" alt="" class="round img-responsive">
-          </div>
-          <div class="recipe-slider">
-            <flex-slider class="carousel" flex-slide="slide in recipe track by $index" animation="slide" item-width="90" item-margin="15" Control-Nav="false">
-              <li>
-                <div class="recipe-category ">
-                  <img ng-src="{{slide}}" alt="" class="img-responsive round">
-                </div>
-              </li>
-            </flex-slider>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="recipes-detail">
-            <h2 class="text-uppercase font-semibold brand-brown-dark">Baingan Bharta</h2>
-            <span>Roasted brinjal lightly cooked with spring onion flavour</span>
-            <div class="recipes-menu font-semibold">
-              <span class="block">Makes 1<sup>1/2</sup> cups</span>
-              <span class="block">Serving size: 1/2 cup</span>
-              <span class="block">Serves: 3</span>
-            </div>
-            <div class="recipes-time">
-              <span class="block">Preparation time: 5 mins</span>
-              <span class="block">Cooking time: 15 mins</span>
-            </div>
-          </div>
-          <div class="recipe-accordion">
-            <uib-accordion close-others="oneAtATime" is-open="status.open">
-              <uib-accordion-group is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-                <uib-accordion-heading>
-                  Ingredients <i class="open-me fa" ng-class="{'fa-minus': status.isFirstOpen, 'fa-plus': !status.isFirstOpen}"></i>
-                </uib-accordion-heading>
-                <div class="recipe-descp">
-                  <span class="block">1 large Brinjal (350 gms)</span>
-                  <span class="block">1 large bulb of spring onion, chopped finely</span>
-                  <span class="block">1/3  cup spring onion greens, chopped finely</span>
-                  <span class="block">1 small tomato, chopped finely</span>
-                  <span class="block">3 cloves garlic (optional), chopped finely</span>
-                  <span class="block">1/4  tsp red chilli powder</span>
-                  <span class="block">1/4  tsp turmeric powder</span>
-                  <span class="block">Salt as per taste</span>
-                  <span class="block">2 tsp oil</span>
-                </div>
-              </uib-accordion-group>
-              <uib-accordion-group is-open="status.open2">
-                <uib-accordion-heading>
-                  Method<i class="open-me fa" ng-class="{'fa-minus': status.open2, 'fa-plus': !status.open2}"></i>
-                </uib-accordion-heading>
-                <div class="recipe-descp"></div>
-              </uib-accordion-group>
-              <uib-accordion-group is-open="status.open3">
-                <uib-accordion-heading>
-                  Value Per Serving <i class="open-me fa" ng-class="{'fa-minus': status.open3, 'fa-plus': !status.open3}"></i>
-                </uib-accordion-heading>
-                <div class="recipe-descp"></div>
-              </uib-accordion-group>
-            </uib-accordion>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="other-recipes text-center">
-    <div class="container">
-      <h3 class="text-uppercase font-semibold brand-brown-dark">Other recipes</h3>
-      <uib-carousel interval="my-Interval">
-        <uib-slide ng-repeat="slide in recipees" active="slide.active">
-          <div class="row">
-            <div class="col-md-4 col-sm-4 col-xs-4" ng-repeat="recipe in slide">
-              <div class="inner-like">
-                <div class="like-image round">
-                  <img ng-src="{{recipe.img}}" alt="" class="img-responsive">
-                </div>
-                <span class="brand-primary text-uppercase font-semibold">{{recipe.name}}</span>
+      <h2 class="brand-brown-dark text-uppercase text-center">Recipes from "The Don’t Diet Book"</h2>
+      <div class="recipedetail-slider">
+        <flex-slider class="carousel" flex-slide="detail in recipedetail track by $index" animation="slide" item-width="350" control-nav="false">
+          <li>
+            <figure class="relate">
+              <div class="recipedetail-imgholder">
+                <img ng-src="{{detail.img}}" alt="" class="img-responsive"/>
               </div>
-            </div>
-          </div>
-        </uib-slide>
-      </uib-carousel>
+              <figcaption><span class="text-uppercase brand-brown-dark recipe-name text-center">{{detail.name}}</span></figcaption>
+            </figure>
+          </li>
+        </flex-slider>
+      </div>
+      <div class="recipedetail-content text-justify">
+        <p>Healthy eating is not something which you should have to make a great effort to do. Rather it is what is right for your body, what is natural. And what is right and natural for the body, should also make you feel and look the best, right? Why is it then that we find it so hard to eat healthy, despite these facts. No other animal in the world has to make an effort to eat properly to stay fit, why then do we?</p>
+        <p>Fortunately or unfortunately, in today's society we have access to many foods from so many different cultures. With this we have forgotten the basic fundamentals of eating right. If we are reminded of these fundamentals, we can again begin to feel and look our best, while still enjoying the foods we love. Eating is probably the most important pleasures in life, so why deny ourselves when with just a little thought and effort we can actually eat our way to good health.</p>
+        <p>The basic fundamentals of nutrition consists of eating all three major meals – breakfast, lunch, and dinner – with a perfect combination of carbohydates, fats, and proteins -including foods rich in vitamins, minerals, phytonutrients, and fibre.</p>
+        <p class="m-clear">-75% of calories from Carbohydrates</p>
+        <p class="m-clear">-20% of calories from lean Protein sources</p>
+        <p class="m-clear">-20% of calories from healthy Fats (mainly poly/mono unsaturated)</p>
+        <p class="m-clear">Keeping this in mind, start eating your way to good health today!</p>
+      </div>
     </div>
   </div>
 </section>
