--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -16,18 +16,19 @@
         </form>
       </div>
       <div class="row">
+
         <div class="col-md-8 col-sm-12">
           <div class="check-blog">
             <div class="blog-postinfo">
               <div class="bloginfo-imgholder">
-                <img src="img/blog/post2.jpg" alt="" class="img-responsive">
+                <img ng-src="{{blog.coverimage|serverimage}}" alt="" class="img-responsive">
               </div>
               <div class="bloginfo-descp">
-                <h3 class="text-uppercase text-bold heading m-clear">sparkle this season</h3>
+                <h3 class="text-uppercase text-bold heading m-clear">{{blog.title}}</h3>
                 <div class="selfcare-bloginfo">
-                  <h5 class="text-uppercase">Posted by : <span class="brand-primary">selfcare by suman</span> | august 19th 2015 | <span class="brand-primary">leave a comment</span> in <span class="brand-primary">selfcare aware</span> | 70 views</h5>
+                  <h5 class="text-uppercase">Posted by : <span class="brand-primary">selfcare by {{blog.posted_by}}</span> | august 19th 2015 | <span class="brand-primary">leave a comment</span> | {{blog.views}} view<span ng-if="blog.views != '1'">s</span></h5>
                 </div>
-                <div class="selfcare-descp text-justify">
+                <div class="selfcare-descp text-justify" ng-bind-html="blog.content">
                   <p>The first monsoon showers brought back the sparkling glow of the city by beating the scorching heat and pollution of summer. But, are these droplets going to help our skin glow? They don’t seem to be much skin friendly. During monsoon
                     the dust particles and dirt settles on our skin and creates multiple skin issues like acne, blackheads, pimples etc. Then why not choose the right foods this wet season to protect our skin?</p>
                   <p>Let’s take a look at these yummy skin friendly items:</p>
@@ -45,7 +46,7 @@
                   </div>
                 </div>
                 <div class="blog-tags">
-                  <a href="" class="btn btn-primary text-uppercase" ng-repeat="tags in blogtags">{{tags.tag}}</a>
+                  <a href="" class="btn btn-primary text-uppercase" ng-repeat="tags in blog.tagsArr">{{tags}}</a>
                 </div>
               </div>
             </div>
@@ -55,7 +56,7 @@
               </div>
               <div class="share-social">
                 <div class="social-info">
-                  <span class='st_linkedin_vcount' displayText='LinkedIn'></span> 
+                  <span class='st_linkedin_vcount' displayText='LinkedIn'></span>
                   <span class='st_plusone_vcount' displayText='Google +1'></span>
                   <span class='st_twitter_vcount' displayText='Tweet'></span>
                   <span class='st_fblike_vcount' displayText='Facebook Like'></span>
@@ -93,7 +94,7 @@
               </div>
             </div>
             <div class="leave-reply">
-              <h3 class="text-uppercase brand-brown-dark text-bold">leave a reply</h3>
+              <h3 class="text-uppercase brand-brown-dark text-bold">leave a comment</h3>
               <p class="brand-primary">Your email address will not be published. Required fields are marked *</p>
               <form action="">
                 <div class="form-group">
