--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -76,16 +76,16 @@
               <p class="brand-primary">Your email address will not be published. Required fields are marked *</p>
               <form action="">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Name*">
+                  <input type="text" class="form-control" ng-model="comment.name" placeholder="Name*">
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Email*">
+                  <input type="email" class="form-control"  ng-model="comment.email" placeholder="Email*">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Website">
+                  <input type="text" class="form-control" ng-model="comment.website" placeholder="Website">
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="name" rows="" cols="" placeholder="Comment"></textarea>
+                  <textarea class="form-control" ng-model="comment.comment" name="name" rows="" cols="" placeholder="Comment"></textarea>
                 </div>
                 <button class="btn btn-primary text-uppercase" type="submit">submit</button>
               </form>
