--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -74,18 +74,22 @@
             <div class="leave-reply">
               <h3 class="text-uppercase brand-brown-dark text-bold">leave a comment</h3>
               <p class="brand-primary">Your email address will not be published. Required fields are marked *</p>
-              <form action="">
+              <form name="commentForm">
                 <div class="form-group">
-                  <input type="text" class="form-control" ng-model="comment.name" placeholder="Name*">
+                  <input name="name" required type="text" class="form-control" ng-model="comment.name" placeholder="Name*">
+                  <div class="" ng-show="commentForm.name.$invalid && commentForm.name.$touched" role="alert">
+                    Please Enter Your Name.
+                  </div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control"  ng-model="comment.email" placeholder="Email*">
+                  <input name="email" required type="email" class="form-control"  ng-model="comment.email" placeholder="Email*">
+                  <div class="" ng-show="commentForm.email.$invalid && commentForm.email.$touched" role="alert">Please Enter Your Email.</div>
                 </div>
                 <div class="form-group">
                   <input type="text" class="form-control" ng-model="comment.website" placeholder="Website">
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" ng-model="comment.comment" name="name" rows="" cols="" placeholder="Comment"></textarea>
+                  <textarea class="form-control" ng-model="comment.comment" rows="" cols="" placeholder="Comment"></textarea>
                 </div>
                 <button class="btn btn-primary text-uppercase" type="submit">submit</button>
               </form>
