--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2175,9 +2175,11 @@ footer {
   padding: 0 10px;
   .blog-imghold {
     @include square(340px);
+    border: 1px solid $brand-brown;
+    position: relative;
     img {
-      min-height: 100%;
-      min-width: 100%;
+      width: 100%;
+      @extend .get-center;
     }
   }
   .blog-detail {
