--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -91,7 +91,7 @@
                 <div class="form-group">
                   <textarea class="form-control" ng-model="comment.comment" rows="" cols="" placeholder="Comment"></textarea>
                 </div>
-                <button class="btn btn-primary text-uppercase" type="submit">submit</button>
+                <button class="btn btn-primary text-uppercase" ng-click="commentSubmit();">submit</button>
               </form>
             </div>
           </div>
