--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -93,6 +93,9 @@
                 </div>
                 <button class="btn btn-primary text-uppercase" ng-click="commentSubmit();">submit</button>
               </form>
+              <div class="after-formmsg">
+                <p class="brand-brown-dark">Your Comment Has Been Successfully Posted</p>
+              </div>
             </div>
           </div>
         </div>
