--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -9,17 +9,26 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <form action="">
+          <form name="forgot">
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
-              <input type="password" class="form-control input-placeholder" id="newpassword">
+              <input name="newpswd" required type="password" class="form-control input-placeholder" id="newpassword">
+              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched">
+                Please Enter The Password.
+              </div>
             </div>
             <div class="form-group">
               <label for="re-password" class="text-uppercase letter-space">re-enter password</label>
-              <input type="password" class="form-control input-placeholder" id="re-password">
+              <input name="repswd" required type="password" class="form-control input-placeholder" id="re-password">
+              <div class="" ng-show="forgot.repswd.$invalid && forgot.repswd.$touched">
+                Password Does Not Match.
+              </div>
             </div>
             <button type="button" name="button" class="btn btn-primary text-uppercase">submit</button>
           </form>
+          <div class="forgot-msgshow">
+            <h4 class="brand-brown-dark">Your Password has been successfully changed.</h4>
+          </div>
         </div>
       </div>
     </div>
