--- a/views/modal/forgotpopup.html
+++ b/views/modal/forgotpopup.html
@@ -2,12 +2,15 @@
   <div class="brand-primary-bg">
       <h2 class="text-uppercase text-center white m-clear">forgot password ?</h2>
   </div>
-  <h3 class="text-uppercase text-center">Enter your registered email address and we will send you instructions.</h3>
+  <h3 class="text-uppercase text-center">{{msg}}</h3>
   <div class="row">
     <div class="col-md-offset-2 col-md-8">
-      <form action="" class="text-center forgot-form">
+      <form name="forgotpop" class="text-center forgot-form">
         <div class="form-group">
-          <input type="email" class="form-control input-placeholder" placeholder="Email *">
+          <input name="forgotemail" required type="email" class="form-control input-placeholder" placeholder="Email *">
+        </div>
+        <div class="" ng-show="forgotpop.forgotemail.$invalid && forgotpop.forgotemail.$touched">
+          Please Enyter Your Email Id.
         </div>
         <div class="form-group">
           <button type="" class="btn btn-primary">SUBMIT</button>
