--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -13,14 +13,14 @@
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
               <input name="newpswd" required type="password" class="form-control input-placeholder" id="newpassword">
-              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched">
+              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched" role="alert"> 
                 Please Enter The Password.
               </div>
             </div>
             <div class="form-group">
               <label for="re-password" class="text-uppercase letter-space">re-enter password</label>
               <input name="repswd" required type="password" class="form-control input-placeholder" id="re-password">
-              <div class="" ng-show="forgot.repswd.$invalid && forgot.repswd.$touched">
+              <div class="" ng-show="forgot.repswd.$invalid && forgot.repswd.$touched" role="alert">
                 Password Does Not Match.
               </div>
             </div>
