--- a/views/modal/forgotpopup.html
+++ b/views/modal/forgotpopup.html
@@ -9,7 +9,7 @@
         <div class="form-group">
           <input name="forgotemail" required type="email" class="form-control input-placeholder" placeholder="Email *">
         </div>
-        <div class="" ng-show="forgotpop.forgotemail.$invalid && forgotpop.forgotemail.$touched">
+        <div class="" ng-show="forgotpop.forgotemail.$invalid && forgotpop.forgotemail.$touched" role="alert">
           Please Enyter Your Email Id.
         </div>
         <div class="form-group">
