--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -12,14 +12,14 @@
           <form name="forgot">
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
-              <input name="newpswd" required type="password" class="form-control input-placeholder" id="newpassword">
-              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched" role="alert"> 
+              <input name="newpswd" required type="password" ng-model="forgot.newpswd" class="form-control input-placeholder" id="newpassword">
+              <div class="" ng-show="forgot.newpswd.$invalid && forgot.newpswd.$touched" role="alert">
                 Please Enter The Password.
               </div>
             </div>
             <div class="form-group">
               <label for="re-password" class="text-uppercase letter-space">re-enter password</label>
-              <input name="repswd" required type="password" class="form-control input-placeholder" id="re-password">
+              <input name="repswd" required type="password" ng-model="forgot.repswd" class="form-control input-placeholder" id="re-password">
               <div class="" ng-show="forgot.repswd.$invalid && forgot.repswd.$touched" role="alert">
                 Password Does Not Match.
               </div>
