--- a/views/modal/forgotpopup.html
+++ b/views/modal/forgotpopup.html
@@ -1,4 +1,4 @@
-<div class="enter-mail">
+<div class="enter-mail" ng-hide="forgotDone">
   <div class="brand-primary-bg">
       <h2 class="text-uppercase text-center white m-clear">forgot password ?</h2>
   </div>
@@ -18,4 +18,7 @@
       </form>
     </div>
   </div>
+</div>
+<div class="" ng-show="forgotDone">
+  Email sent successfully
 </div>
