changes for forgot password done.

--- a/views/content/forgotpassword.html
+++ b/views/content/forgotpassword.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <form name="forgot">
+          <form name="forgot"  ng-hide="formSubmitDone">
             <div class="form-group">
               <label for="newpassword" class="text-uppercase letter-space">Enter new password</label>
               <input name="newpswd" required type="password" ng-model="forgot.newpswd" class="form-control input-placeholder" id="newpassword">
@@ -24,9 +24,9 @@
                 Password Does Not Match.
               </div>
             </div>
-            <button type="button" name="button" class="btn btn-primary text-uppercase">submit</button>
+            <button type="button" name="button" class="btn btn-primary text-uppercase" ng-hide="forgot.repswd != forgot.newpswd" ng-click="submitForm(forgot.repswd)">submit</button>
           </form>
-          <div class="forgot-msgshow">
+          <div class="forgot-msgshow" ng-show="formSubmitDone">
             <h4 class="brand-brown-dark">Your Password has been successfully changed.</h4>
           </div>
         </div>
